fix: don't shift right at mobile

--- a/source/css/bgText.scss
+++ b/source/css/bgText.scss
@@ -1,5 +1,7 @@
 #bgTitle {
   font-size: 12rem;
+  max-width: 100vw;
+  overflow: hidden;
   top: -130px;
   z-index: -1;
 }
